--- a/src/styles.css
+++ b/src/styles.css
@@ -21,4 +21,10 @@
     font-family: "Poppins", sans-serif;
     background-color: #000;
   }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
